--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
+		"svelte-canvas": "^1.2.0",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
